[gd_scene load_steps=4 format=2]

[ext_resource path="res://Resources/theme.tres" type="Theme" id=1]
[ext_resource path="res://Explorer/Explorer.gd" type="Script" id=2]
[ext_resource path="res://Explorer/List.tscn" type="PackedScene" id=3]

[node name="Explorer" type="Control"]
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 800.0

[node name="Daecher" parent="HBoxContainer" instance=ExtResource( 3 )]
margin_right = 634.0
margin_bottom = 800.0
size_flags_horizontal = 3

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 638.0
margin_right = 642.0
margin_bottom = 800.0

[node name="Schnitte" parent="HBoxContainer" instance=ExtResource( 3 )]
margin_left = 646.0
margin_right = 1280.0
margin_bottom = 800.0
size_flags_horizontal = 3
[connection signal="item_new" from="HBoxContainer/Daecher" to="." method="_on_Daecher_item_new"]
[connection signal="item_removed" from="HBoxContainer/Daecher" to="." method="_on_Daecher_item_removed"]
[connection signal="item_renamed" from="HBoxContainer/Daecher" to="." method="_on_Daecher_item_renamed"]
[connection signal="item_selected" from="HBoxContainer/Daecher" to="." method="_on_Daecher_item_selected"]
[connection signal="custom_button_pressed" from="HBoxContainer/Schnitte" to="." method="_on_Schnitte_custom_button_pressed"]
[connection signal="item_new" from="HBoxContainer/Schnitte" to="." method="_on_Schnitte_item_new"]
[connection signal="item_removed" from="HBoxContainer/Schnitte" to="." method="_on_Schnitte_item_removed"]
[connection signal="item_renamed" from="HBoxContainer/Schnitte" to="." method="_on_Schnitte_item_renamed"]
[connection signal="item_selected" from="HBoxContainer/Schnitte" to="." method="_on_Schnitte_item_selected"]
